Week 5 final assignment

--- a/Final Assignment/Capstone Final Assignment.ipynb
+++ b/Final Assignment/Capstone Final Assignment.ipynb
@@ -15,8 +15,10 @@
     "\n",
     "1. Introduction - Project Description\n",
     "2. Data and resources\n",
-    "3. Development\n",
-    "4. Analysis - Conclusion"
+    "3. Methodology\n",
+    "4. Results\n",
+    "5. Discussion\n",
+    "6. Conclusion"
    ]
   },
   {
@@ -48,6 +50,114 @@
     "2. Foursquare venues information, specially Wine shops, Wine Bars, Paella Restaurants, Spanish Restaurants and Tapas Restaurants. This data can be obtained directly from the Foursquare API.\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Methodology\n",
+    "\n",
+    "The following libraries are needed:\n",
+    "\n",
+    "- numpy\n",
+    "- pandas\n",
+    "- geopy\n",
+    "- json\n",
+    "- matplotlib\n",
+    "- sklearn\n",
+    "- folium\n",
+    "\n",
+    "1. First we gather the needed information (New York boroughs and neighbourhoods with coordinates)\n",
+    "\n",
+    "2. Cross this information with Foursquare data in order to obtain the Wine shops, Wine Bars, Paella Restaurants, Spanish Restaurants and Tapas Restaurants per neighbourhood.\n",
+    "\n",
+    "3. Once the dataframe is created and cleaned (some data must be filtered using .drop, remove NaN values with .dropna and more) the K means clustering must be done.\n",
+    "\n",
+    "4. Clustering the information helps to make a more reliable analysis, grouping the information based on the venue data for each neighbourhood.\n",
+    "\n",
+    "5. Finally, after having grouped the neighbourhoods based on the venues data an analysis can be made."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Results\n",
+    "\n",
+    "Based on the data, Boroughs like Brooklyn and Manhattan have the most wine shops and wine bars. This could indicate those Boroughs are ideal to open a new store. From all the neighbourhoods of Brooklyn and Manhattan, Williamsburg, East Flatbush, Windsor Terrace , South Side, and North Side are perhaps the most ideal locations to open a new experience center of Spanish Wine and Tapas.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src = \"images/Cluster_map.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 1\n",
+    "\n",
+    "<img src=\"images/Cluster_1.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 2\n",
+    "\n",
+    "<img src=\"images/Cluster_2.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 3\n",
+    "\n",
+    "<img src=\"images/Cluster_3.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 4\n",
+    "\n",
+    "<img src=\"images/Cluster_4.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cluster 5\n",
+    "\n",
+    "<img src=\"images/Cluster_5.png\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Discussions\n",
+    "\n",
+    "This methodology works perfect to understand based on the number of venues, where is the best possible location to open a new business, however there are a lot of different factors that have to be included such as (land use, communities and culture of the area, security, transport, and more). Gathering the data of all the variables is a good exercise that requires field work and a deep market analysis.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Conclusion\n",
+    "\n",
+    "For areas like marketing, Machine Learning is an excellent tool to increase the available data and analysis to make more and better decisions. This methodology must be complemented with other techniques such as deep market analysis in order to be sure that opening a Spanish wine and tapas experience center is going to be a success business or not."
    ]
   },
   {
